Fixed placement of social section/contactSection

--- a/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
@@ -5,31 +5,33 @@
     <title>Kontakt Page</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="css/frontPage.css" />
+    <link type="text/css" rel="stylesheet" href="css/Kontakt.css" />
     <link type="text/css" rel="stylesheet" href="css/tekstHeader.css" />
+
+    
+
+</head>
+<body>
 
     <div class="header" id="frontHeader">
 
         <div class="topnav" style="text-align: center">
-            <a href="http://localhost:52434/">Forside</a>
+            <a href="http://localhost:55716/">Forside</a>
             <a href="Spil.html">Spil</a>
             <a href="Anmeldelser.html">Anmeldelser</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
     </div>
+
     <br />
 
     <div class="ContactBackground" style="text-align: center">
-        <img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo" />
-        <img src="Gamechanger billedmateriale/Sociale ikoner/icon_facebook.png" alt="gameChange_Logo" />
-        <img src="Gamechanger billedmateriale/Sociale ikoner/icon_gplus.png" alt="gameChange_Logo" />
-        <img src="Gamechanger billedmateriale/Sociale ikoner/icon_twitter.png" alt="gameChange_Logo" />
-        <img src="Gamechanger billedmateriale/Sociale ikoner/icon_youtube.png" alt="gameChange_Logo" />
+            <img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_facebook.png" alt="gameChange_Logo" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_gplus.png" alt="gameChange_Logo" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_twitter.png" alt="gameChange_Logo" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_youtube.png" alt="gameChange_Logo" />
     </div>
-</head>
-    <body>
-    
 
-
-    </body>
+</body>
 </html>
