The social side has gotten a textured background and the logos are sitting in the correct places with the correct sizes.

--- a/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
@@ -25,12 +25,30 @@
 
     <br />
 
-    <div class="ContactBackground" style="text-align: center">
-            <img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo" />
-                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_facebook.png" alt="gameChange_Logo" />
-                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_gplus.png" alt="gameChange_Logo" />
-                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_twitter.png" alt="gameChange_Logo" />
-                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_youtube.png" alt="gameChange_Logo" />
+    <div class="ContactBackground" >
+        <div>
+            <table class="table" >
+                <thead>
+                    <tr>
+                        <th style="width:57%">
+                            <img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo" height="35px" />
+                        </th>
+                        <th style="padding-bottom:15px">
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_facebook.png" alt="gameChange_Logo" height="28px" width="28px" />
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_gplus.png" alt="gameChange_Logo" height="28px" width="28px" />
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_twitter.png" alt="gameChange_Logo" height="28px" width="28px" />
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_youtube.png" alt="gameChange_Logo" height="28px" width="28px" />
+                        </th>
+                    </tr>
+
+                </thead>
+            </table>
+            <!--<img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo"height="30px" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_facebook.png" alt="gameChange_Logo" height="30px" width="30px" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_gplus.png" alt="gameChange_Logo" height="30px" width="30px" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_twitter.png" alt="gameChange_Logo" height="30px" width="30px" />
+                <img src="Gamechanger billedmateriale/Sociale ikoner/icon_youtube.png" alt="gameChange_Logo" height="30px" width="30px" />-->
+        </div>
     </div>
 
 </body>
