Contact0.2 Contact form, footer and top part created Font has been changed to open sans

--- a/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
@@ -17,7 +17,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th style="width:57%">
+                        <th style="width:60%">
                             <img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo" height="35px" />
                         </th>
                         <th style="padding-bottom:15px">
@@ -42,6 +42,65 @@
             <a href="Spil.html">Spil</a>
             <a href="Anmeldelser.html">Anmeldelser</a>
             <a href="Kontakt.html">Kontakt</a>
+        </div>
+    </div>
+    <div class="SocialBox">
+        <div class="ContactHeader">
+            <table>
+                <thead>
+                    <tr>
+                        <th>
+                            <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="16px" style="padding-bottom:6px"/>
+                        </th>
+                        <th>
+                            <h3 style="padding-top:6px; padding-left:3px" >
+                                Kontakt
+                            </h3>
+                        </th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+        <p style="padding-top:8px">Udfyld og send formularen, hvis du har et spørgsmål eller en besked.</p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th width="30%" id="message">
+                        <p>Fulde Navn</p>
+                    </th>
+                    <th >
+                        <input type="text" id="FName"/>
+                    </th>
+                </tr>
+                <tr>
+                    <th id="message">
+                        <p>Email</p>
+                    </th>
+                    <th>
+                        <input type="text" id="email" />
+                    </th>
+                </tr>
+                <tr >
+                    <th id="message" >
+                        <p>Besked</p>
+                    </th>
+                    <th>
+                        <textarea id="besked"> 
+                        </textarea>
+                    </th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th>
+                        <button id="KontaktButton" class="AquaButton" >
+                            Send
+                        </button>
+                    </th>
+                </tr>
+            </thead>
+        </table>
+        <div class="Footer">
+            <p>GameChanger website | <u>kontakt@gamechanger.local</u> | <u>www.gamechanger.local</u></p>
         </div>
     </div>
 
