--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -5,8 +5,85 @@
     <title>Spil</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="css/frontPage.css" />
+    <link type="text/css" rel="stylesheet" href="css/Spil.css" />
     <link type="text/css" rel="stylesheet" href="css/tekstHeader.css" />
+</head>
+<body>
+    <div class="ContactBackground">
+        <div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th style="width:60%">
+                            <img src="Gamechanger billedmateriale/Logo/logo.png" alt="gameChange_Logo" height="35px" />
+                        </th>
+                        <th style="padding-bottom:15px">
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_facebook.png" alt="gameChange_Logo" height="28px" width="28px" />
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_gplus.png" alt="gameChange_Logo" height="28px" width="28px" />
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_twitter.png" alt="gameChange_Logo" height="28px" width="28px" />
+                            <img src="Gamechanger billedmateriale/Sociale ikoner/icon_youtube.png" alt="gameChange_Logo" height="28px" width="28px" />
+                        </th>
+                    </tr>
+
+                </thead>
+            </table>
+        </div>
+    </div>
+
+    <div class="WhiteBoxBackground">
+        <div>
+            <table class="table" style="border:hidden">
+                <tr>
+                    <th class="SpilHeader" width="3%">
+                        <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="20px" style="padding-bottom:1%; padding-left: 1%" />
+                    </th>
+
+
+                    <th class="SpilHeader" width="45%" style="padding-left:0">
+                        <h3>
+                            Aktuelle spil
+                        </h3>
+                    </th>
+
+                    <th width="1%">
+
+                    </th>
+
+                    <th class="SpilHeader" width="3%">
+                        <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="20px" style="padding-bottom:1%; padding-left: 1%" />
+
+                    </th>
+
+                    <th class="SpilHeader" width="20%" style="padding-left:0">
+                        <h3>
+                            Nye anmeldelser
+                        </h3>
+                    </th>
+                </tr>
+                <tr>
+                    <td colspan="2" style="padding-left:0">
+                        <table class="table">
+                            <tr style="padding-left:0">
+                                <td>
+                                    <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="60%" />
+                                </td>
+                                <td style="padding-left:0">
+                                    <h3>Splinter Cell: Blacklist</h3>
+                                    <p>Udgiver: <u>Ubisoft</u> | Genre: Stealth</p>
+
+                                    <p>here we go heell sfmo safs saff fasfnoadidnfdf  fdsofniodin dfsiofndlkn dsfionldfkns</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td></td>
+                    <td colspan="2">
+                        Dav
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
     <div class="header" id="frontHeader">
 
@@ -17,8 +94,5 @@
             <a href="Kontakt.html">Kontakt</a>
         </div>
     </div>
-</head>
-<body>
-
 </body>
 </html>
