--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -34,12 +34,12 @@
         <div>
             <table class="table" style="border:hidden">
                 <tr>
-                    <th class="SpilHeader" width="3%">
+                    <th class="SpilHeader" width="3%" style="padding-bottom: 0%">
                         <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="20px" style="padding-bottom:1%; padding-left: 1%" />
                     </th>
 
 
-                    <th class="SpilHeader" width="45%" style="padding-left:0">
+                    <th class="SpilHeader" width="60%" style="padding-left:0; padding-bottom: 0%">
                         <h3>
                             Aktuelle spil
                         </h3>
@@ -49,13 +49,13 @@
 
                     </th>
 
-                    <th class="SpilHeader" width="3%">
+                    <th class="SpilHeader" width="3%" style="padding-bottom: 0%">
                         <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="20px" style="padding-bottom:1%; padding-left: 1%" />
 
                     </th>
 
-                    <th class="SpilHeader" width="20%" style="padding-left:0">
-                        <h3>
+                    <th class="SpilHeader" width="20%" style="padding-left:0; padding-bottom: 0%">
+                        <h3 id="NyeAnmeldelser">
                             Nye anmeldelser
                         </h3>
                     </th>
@@ -64,28 +64,159 @@
                     <td colspan="2" style="padding-left:0">
                         <table class="table">
                             <tr style="padding-left:0">
+                                <td style="padding-bottom: 0%">
+                                    <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="60%" width="100%"/>
+                                </td>
+                                <td style="padding-left:0;padding-bottom: 0%">
+                                    <h3 id="GameTitle"><b>Splinter Cell: Blacklist</b></h3>
+                                    <p id="GameInfo">Udgiver: <u>Ubisoft</u> | Genre: Stealth</p>
+                                    <p id="GameDescription">here we go Splinter Cell: Blacklist is a greate game within the stealth genre. Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="table" id="Seperator">
+                            <tr style="padding-left:0">
                                 <td>
-                                    <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="60%" />
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="60%" width="100%" />
                                 </td>
                                 <td style="padding-left:0">
-                                    <h3>Splinter Cell: Blacklist</h3>
-                                    <p>Udgiver: <u>Ubisoft</u> | Genre: Stealth</p>
-
-                                    <p>here we go heell sfmo safs saff fasfnoadidnfdf  fdsofniodin dfsiofndlkn dsfionldfkns</p>
+                                    <h3 id="GameTitle"><b>Grand Theft Auto V</b></h3>
+                                    <p id="GameInfo">Udgiver: <u>Rockstar Games</u> | Genre: Action-adventure</p>
+                                    <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="table">
+                            <tr style="padding-left:0">
+                                <td>
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="60%" width="100%"/>
+                                </td>
+                                <td style="padding-left:0">
+                                    <h3 id="GameTitle"><b>Titanfall</b></h3>
+                                    <p id="GameInfo">Udgiver: <u>Respawn Entertainment</u> | Genre: Action, Skydespil</p>
+                                    <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="table" id="Seperator">
+                            <tr style="padding-left:0">
+                                <td>
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="60%" width="100%"/>
+                                </td>
+                                <td style="padding-left:0">
+                                    <h3 id="GameTitle"><b>Tomb Raider 2013</b></h3>
+                                    <p id="GameInfo">Udgiver: <u>Square Enix</u> | Genre: Action-adventure</p>
+                                    <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="table">
+                            <tr style="padding-left:0">
+                                <td>
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="60%" width="100%"/>
+                                </td>
+                                <td style="padding-left:0">
+                                    <h3 id="GameTitle"><b>Halo 4</b></h3>
+                                    <p id="GameInfo">Udgiver: <u>Microsoft Studios</u> | Genre: First-person shooter</p>
+                                    <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="table" id="Seperator">
+                            <tr style="padding-left:0">
+                                <td>
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="60%" width="100%"/>
+                                </td>
+                                <td style="padding-left:0">
+                                    <h3 id="GameTitle"><b>Forza 4</b></h3>
+                                    <p id="GameInfo">Udgiver: <u>Microsoft Studios</u> | Genre: Sport</p>
+                                    <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
                                 </td>
                             </tr>
                         </table>
                     </td>
+                    
                     <td></td>
+
                     <td colspan="2">
-                        Dav
+                        <table style="padding-left: 0%" width="100%">
+                            <tr>
+                                <td width="23%">
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="23%" />
+                                </td>
+                                <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
+                                    <h3 id="GameTitleNyeAnd"><b>Forza 4</b></h3>
+                                    <p id="AndDesc"> Oprettet 03 Juni 2020</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table id="Seperator" width="100%">
+                            <tr>
+                                <td width="23%">
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="23%" />
+                                </td>
+                                <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
+                                    <h3 id="GameTitleNyeAnd"><b>Splinter Cell: Blacklist</b></h3>
+                                    <p id="AndDesc"> Oprettet 01 Juni 2020</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table width="100%">
+                            <tr>
+                                <td width="23%">
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="23%" />
+                                </td>
+                                <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
+                                    <h3 id="GameTitleNyeAnd"><b>Titanfall</b></h3>
+                                    <p id="AndDesc"> Oprettet 30 April 2020</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table id="Seperator" width="100%">
+                            <tr>
+                                <td width="23%">
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="23%" />
+                                </td>
+                                <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
+                                    <h3 id="GameTitleNyeAnd"><b>Grand Theft Auto V</b></h3>
+                                    <p id="AndDesc"> Oprettet 26 Januar 2020</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table width="100%">
+                            <tr>
+                                <td width="23%">
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="23%" />
+                                </td>
+                                <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
+                                    <h3 id="GameTitleNyeAnd"><b>Halo 4</b></h3>
+                                    <p id="AndDesc"> Oprettet 23 December 2019</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table id="Seperator" width="100%">
+                            <tr>
+                                <td width="23%">
+                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="23%"/>
+                                </td>
+                                <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
+                                    <h3 id="GameTitleNyeAnd"><b>Thomb Raider 2013</b></h3>
+                                    <p id="AndDesc"> Oprettet 17 Januar 2015</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
                     </td>
                 </tr>
             </table>
         </div>
+
+        <div class="Footer">
+            <p>GameChanger website | <u>kontakt@gamechanger.local</u> | <u>www.gamechanger.local</u></p>
+        </div>
     </div>
 
-    <div class="header" id="frontHeader">
+    <div class="header; sticky" id="frontHeader">
 
         <div class="topnav" style="text-align: center">
             <a href="http://localhost:55716/">Forside</a>
