TitanFall And 0.1V Updated Spil link

--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -89,13 +89,17 @@
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td>
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="60%" width="100%"/>
+                                    <a href="Andmeldelser/Titanfall.html">
+                                        <img src="Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="60%" width="100%" />
+                                    </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <h3 id="GameTitle"><b>Titanfall</b></h3>
+                                    <a href="Andmeldelser/Titanfall.html">
+                                        <h3 id="GameTitle" href="Andmeldelser/Titanfall.html"><b>Titanfall</b></h3>
+                                    </a>
                                     <p id="GameInfo">Udgiver: <u>Respawn Entertainment</u> | Genre: Action, Skydespil</p>
                                     <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
-                                </td>
+                                </td>   
                             </tr>
                         </table>
                         <table class="table" id="Seperator">
