Spil 0.4V Connected all anmeldelser

--- a/GameChanger Projekt - El Ti/wwwroot/Andmeldelser/SplinterCellBlacklist.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Andmeldelser/SplinterCellBlacklist.html
@@ -63,11 +63,11 @@
                 <tr>
                     <!-- Left column under andmeldelser  -->
                     <td colspan="2" style="padding-left:0;">
-                        <img src="../Gamechanger billedmateriale/Anmeldelser/titanfall.jpg" width="100%" />
+                        <img src="../Gamechanger billedmateriale/Anmeldelser/splinter_cell_black_list.jpg" width="100%"/>
 
-                        <h3 class="Title">One small leap for mankind</h3>
-                        <p class="UnderTitle">Anmeldelse af spillet Titanfall</p>
-                        <p class="CreatedSection">Oprettet: 30 April 2020</p>
+                        <h3 class="Title">A drone in the dark</h3>
+                        <p class="UnderTitle">Anmeldelse af spillet Splinter Cell </p>
+                        <p class="CreatedSection">Oprettet: 01 Juni 2020</p>
 
                         <p class="Review">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus mattis nisi. Sed cursus pulvinar lectus, a laoreet sapien porttitor vel. Ut at venenatis augue, in mattis turpis. Integer mauris massa, pharetra sit amet odio sed, eleifend congue lorem. Phasellus cursus neque et magna pretium eleifend. Fusce orci neque, eleifend vel sodales eu, sollicitudin non sapien. Fusce ac massa pellentesque, molestie metus eget, consequat dui. Duis et tempor leo, in posuere tortor. Mauris urna leo, semper vel finibus at, imperdiet eu lorem. Duis iaculis libero nec ultricies efficitur. Donec vel nisi placerat, viverra leo a, feugiat felis.
