--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -45,9 +45,7 @@
                         </h3>
                     </th>
 
-                    <th width="1%">
-
-                    </th>
+                    <th width="1%"></th>
 
                     <th class="SpilHeader" width="3%" style="padding-bottom: 0%">
                         <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="20px" style="padding-bottom:1%; padding-left: 1%" />
@@ -65,10 +63,14 @@
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td style="padding-bottom: 0%">
-                                    <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="60%" width="100%"/>
+                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="60%" width="100%" />
+                                    </a>
                                 </td>
                                 <td style="padding-left:0;padding-bottom: 0%">
-                                    <h3 id="GameTitle"><b>Splinter Cell: Blacklist</b></h3>
+                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                        <h3 id="GameTitle"><b>Splinter Cell: Blacklist</b></h3>
+                                    </a>
                                     <p id="GameInfo">Udgiver: <u>Ubisoft</u> | Genre: Stealth</p>
                                     <p id="GameDescription">here we go Splinter Cell: Blacklist is a greate game within the stealth genre. Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete</p>
                                 </td>
@@ -77,10 +79,15 @@
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="60%" width="100%" />
+                                    <a href="Andmeldelser/gtav.html">
+                                        <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="60%" width="100%" />
+                                    </a>
+                                    
                                 </td>
                                 <td style="padding-left:0">
-                                    <h3 id="GameTitle"><b>Grand Theft Auto V</b></h3>
+                                    <a href="Andmeldelser/gtav.html">
+                                        <h3 id="GameTitle"><b>Grand Theft Auto V</b></h3>
+                                    </a>
                                     <p id="GameInfo">Udgiver: <u>Rockstar Games</u> | Genre: Action-adventure</p>
                                     <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
                                 </td>
@@ -105,10 +112,14 @@
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="60%" width="100%"/>
+                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                        <img src="Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="60%" width="100%" />
+                                    </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <h3 id="GameTitle"><b>Tomb Raider 2013</b></h3>
+                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                        <h3 id="GameTitle"><b>Tomb Raider 2013</b></h3>
+                                    </a>
                                     <p id="GameInfo">Udgiver: <u>Square Enix</u> | Genre: Action-adventure</p>
                                     <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
                                 </td>
@@ -117,10 +128,14 @@
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td>
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="60%" width="100%"/>
+                                    <a href="/Andmeldelser/Halo4.html">
+                                        <img src="Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="60%" width="100%" />
+                                    </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <h3 id="GameTitle"><b>Halo 4</b></h3>
+                                    <a href="/Andmeldelser/Halo4.html">
+                                        <h3 id="GameTitle"><b>Halo 4</b></h3>
+                                    </a>
                                     <p id="GameInfo">Udgiver: <u>Microsoft Studios</u> | Genre: First-person shooter</p>
                                     <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
                                 </td>
@@ -129,10 +144,14 @@
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="60%" width="100%"/>
+                                    <a href="Andmeldelser/Forza4.html">
+                                        <img src="Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="60%" width="100%" />
+                                    </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <h3 id="GameTitle"><b>Forza 4</b></h3>
+                                    <a href="Andmeldelser/Forza4.html">
+                                        <h3 id="GameTitle"><b>Forza 4</b></h3>
+                                    </a>
                                     <p id="GameInfo">Udgiver: <u>Microsoft Studios</u> | Genre: Sport</p>
                                     <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
                                 </td>
@@ -146,10 +165,14 @@
                         <table style="padding-left: 0%" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="23%" />
+                                    <a href="/Andmeldelser/Forza4.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="23%" />
+                                    </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <h3 id="GameTitleNyeAnd"><b>Forza 4</b></h3>
+                                    <a href="/Andmeldelser/Forza4.html">
+                                        <h3 id="GameTitleNyeAnd"><b>Forza 4</b></h3>
+                                    </a>
                                     <p id="AndDesc"> Oprettet 03 Juni 2020</p>
                                 </td>
                             </tr>
@@ -157,10 +180,14 @@
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="23%" />
+                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="23%" />
+                                    </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <h3 id="GameTitleNyeAnd"><b>Splinter Cell: Blacklist</b></h3>
+                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                        <h3 id="GameTitleNyeAnd"><b>Splinter Cell: Blacklist</b></h3>
+                                    </a>
                                     <p id="AndDesc"> Oprettet 01 Juni 2020</p>
                                 </td>
                             </tr>
@@ -168,10 +195,14 @@
                         <table width="100%">
                             <tr>
                                 <td width="23%">
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="23%" />
+                                    <a href="/Andmeldelser/Titanfall.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="23%" />
+                                    </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <h3 id="GameTitleNyeAnd"><b>Titanfall</b></h3>
+                                    <a href="/Andmeldelser/Titanfall.html">
+                                        <h3 id="GameTitleNyeAnd"><b>Titanfall</b></h3>
+                                    </a>
                                     <p id="AndDesc"> Oprettet 30 April 2020</p>
                                 </td>
                             </tr>
@@ -179,10 +210,14 @@
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="23%" />
+                                    <a href="/Andmeldelser/gtav.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="23%" />
+                                    </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <h3 id="GameTitleNyeAnd"><b>Grand Theft Auto V</b></h3>
+                                    <a href="/Andmeldelser/gtav.html">
+                                        <h3 id="GameTitleNyeAnd"><b>Grand Theft Auto V</b></h3>
+                                    </a>
                                     <p id="AndDesc"> Oprettet 26 Januar 2020</p>
                                 </td>
                             </tr>
@@ -190,10 +225,14 @@
                         <table width="100%">
                             <tr>
                                 <td width="23%">
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="23%" />
+                                    <a href="/Andmeldelser/Halo4.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="23%" />
+                                    </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <h3 id="GameTitleNyeAnd"><b>Halo 4</b></h3>
+                                    <a href="/Andmeldelser/Halo4.html">
+                                        <h3 id="GameTitleNyeAnd"><b>Halo 4</b></h3>
+                                    </a>
                                     <p id="AndDesc"> Oprettet 23 December 2019</p>
                                 </td>
                             </tr>
@@ -201,15 +240,18 @@
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <img src="Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="23%"/>
+                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="23%" />
+                                    </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <h3 id="GameTitleNyeAnd"><b>Thomb Raider 2013</b></h3>
+                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                        <h3 id="GameTitleNyeAnd"><b>Thomb Raider 2013</b></h3>
+                                    </a>
                                     <p id="AndDesc"> Oprettet 17 Januar 2015</p>
                                 </td>
                             </tr>
                         </table>
-                    </td>
                     </td>
                 </tr>
             </table>
@@ -225,9 +267,10 @@
         <div class="topnav" style="text-align: center">
             <a href="http://localhost:55716/">Forside</a>
             <a href="Spil.html">Spil</a>
-            <a href="Anmeldelser.html">Anmeldelser</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
+
+       
     </div>
 </body>
 </html>
