FrontPage 0.8V Fixed problem on top nav bar and some commenting on code.

--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="css/tekstHeader.css" />
 </head>
 <body>
+
+    <!-- The social banner and background |Contains website logo and social icons for facebook, google+, twitter and youtube.|-->
     <div class="ContactBackground">
         <div>
             <table class="table">
@@ -30,6 +32,7 @@
         </div>
     </div>
 
+    <!-- Box container for the page -->
     <div class="WhiteBoxBackground">
         <div>
             <table class="table" style="border:hidden">
@@ -58,8 +61,13 @@
                         </h3>
                     </th>
                 </tr>
+
+
                 <tr>
+                    <!-- Left column on page is Aktuelle spil -->
                     <td colspan="2" style="padding-left:0">
+
+                        <!-- Table with two columns left is picture and second is information. | Normal layout for anything put in Aktuelle spil| -->
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td style="padding-bottom: 0%">
@@ -76,13 +84,15 @@
                                 </td>
                             </tr>
                         </table>
+                        <!-- ------------------------------------------------------------------------------------------------------------------------ -->
+                        <!-- Other data put into the Aktuelle spil section -->
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
                                     <a href="Andmeldelser/gtav.html">
                                         <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="60%" width="100%" />
                                     </a>
-                                    
+
                                 </td>
                                 <td style="padding-left:0">
                                     <a href="Andmeldelser/gtav.html">
@@ -106,7 +116,7 @@
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Respawn Entertainment</u> | Genre: Action, Skydespil</p>
                                     <p id="GameDescription"> Lopum getes for del lof, hvor dit hfn lbn hye. Kol lpo vro dete vie klo gtfo lmao eti fson, fodpsn fasopk oko sdaw faop fsk oske.</p>
-                                </td>   
+                                </td>
                             </tr>
                         </table>
                         <table class="table" id="Seperator">
@@ -157,11 +167,15 @@
                                 </td>
                             </tr>
                         </table>
+                        <!-- ------------------------------------------------------------------------------------------------------------------------ -->
                     </td>
-                    
+
                     <td></td>
 
+                    <!-- Nye Anmeldelser section -->
                     <td colspan="2">
+
+                        <!-- Table with two columns left is picture and second is information. | Normal layout for anything put in Nye Anmeldelser| -->
                         <table style="padding-left: 0%" width="100%">
                             <tr>
                                 <td width="23%">
@@ -177,6 +191,8 @@
                                 </td>
                             </tr>
                         </table>
+                        <!-- ------------------------------------------------------------------------------------------------------------------------ -->
+                        <!-- Other data put into the Aktuelle spil section -->
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
@@ -192,6 +208,7 @@
                                 </td>
                             </tr>
                         </table>
+
                         <table width="100%">
                             <tr>
                                 <td width="23%">
@@ -207,6 +224,7 @@
                                 </td>
                             </tr>
                         </table>
+
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
@@ -222,6 +240,7 @@
                                 </td>
                             </tr>
                         </table>
+
                         <table width="100%">
                             <tr>
                                 <td width="23%">
@@ -237,6 +256,7 @@
                                 </td>
                             </tr>
                         </table>
+
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
@@ -252,7 +272,9 @@
                                 </td>
                             </tr>
                         </table>
+                        <!-- ------------------------------------------------------------------------------------------------------------------------ -->
                     </td>
+                    <!-- End of Nye Anmeldelser section -->
                 </tr>
             </table>
         </div>
@@ -262,6 +284,7 @@
         </div>
     </div>
 
+    <!-- Navigation Bar put here to be loaded last and in front! -->
     <div class="header; sticky" id="frontHeader">
 
         <div class="topnav" style="text-align: center">
